--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ form {
   <label><input type="radio" name="mode" value="stacked"> League View</label>
 </form>
 <p>Source: </p><a href="https://en.wikipedia.org/wiki/2015_Copa_America">Wikipedia</a>
-<p>Adapted from Mike Bostock's example </p><a href="http://bl.ocks.org/mbostock/4679202">here</a>
+<p>Adapted from Mike Bostock's example <a href="http://bl.ocks.org/mbostock/4679202">here</a></p>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js"></script>
 <script>
